--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,11 @@
 language: objective-c
 osx_image: xcode10.2
-podfile: FillTheTank/Podfile
 env:
   global:
   - LC_CTYPE=en_US.UTF-8
   - LANG=en_US.UTF-8
   - PROJECT=FillTheTank.xcodeproj
-  - WORKSPACE=FillTheTank/FillTheTank.xcworkspace
+  - WORKSPACE=FillTheTank.xcworkspace
   - IOS_SDK=iphonesimulator12.2
   - IOS_FRAMEWORK_SCHEME="FillTheTank"
   - EXAMPLE_SCHEME="FillTheTankDemo"
@@ -23,7 +22,7 @@ script:
   - xcodebuild -version
   - xcodebuild -showsdks
   - xcodebuild -list
-  - xcodebuild -project "$PROJECT" -scheme "$IOS_FRAMEWORK_SCHEME" -workspace "$WORKSPACE" -destination "$DESTINATION" -configuration Debug ONLY_ACTIVE_ARCH=NO ENABLE_TESTABILITY=YES   test | xcpretty;
+  - xcodebuild -workspace "$WORKSPACE" -scheme "$IOS_FRAMEWORK_SCHEME"  -destination "$DESTINATION" -configuration Debug ONLY_ACTIVE_ARCH=NO ENABLE_TESTABILITY=YES   test | xcpretty;
 
 notifications:
   slack:
